# tbdannotation

./: .gitmodules  README.md  deps.sh
TBDAnnotation/: CMakeLists.txt
TBDAnnotation/cmake/modules/: FindSQLite3.cmake
TBDAnnotation/src/: CMakeLists.txt  TBDAnnotation.cpp
TBDAnnotation/src/Model/: ConvertedPdfMap.hpp  CustomPermutation.hpp  DatabaseHandler.hpp  Debug.h  FeaturesManager.hpp  FileManager.hpp  ImageProcessor.hpp  Page.hpp  Parameters.h  ProgramOptions.hpp  RegisteredPdfMap.hpp  TShighgui.hpp  Triangle.hpp  Utils.hpp  WebCamCapture.hpp
TBDAnnotation/src/Model/StateMachine/: ExitState.hpp  MachineEvents.hpp  PageAnnotation.hpp  PageDiscovering.hpp  PageError.hpp  PageRetrieval.hpp  PageTracking.hpp  PdfCreation.hpp  SimpleStateMachine.hpp  StateMachine.hpp
TBDCalibration/: CMakeLists.txt
TBDCalibration/src/: CMakeLists.txt  CustomPermutation.hpp  Parameters.h  TBDCalibration.cpp  Utils.hpp
